1041 - Fix comma spacing in address string, add show/hide button to allow internal users to preview public view of the details page

--- a/src/bcrhp/bcrhp/media/css/resource_details.css
+++ b/src/bcrhp/bcrhp/media/css/resource_details.css
@@ -23,3 +23,7 @@ button.info-button {
 .external-urls a:hover {
     text-decoration: underline;
 }
+
+.street_address, .city, .province, .address_separator {
+    font-size: 1.4rem;
+}
